[package]
name = "papi-sys"
version = "0.2.0"
authors = ["Clemens Lutz <lutzcle@cml.li>", "Yeonsoo Kim <alkorang@outlook.com>"]

description = "PAPI (Performance API) bindings for Rust"
repository = "https://github.com/LutzCle/papi-sys"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hardware-counters", "performance-counters"]
categories = ["hardware-support", "development-tools::profiling", "api-bindings"]

edition = "2018"

build = "build.rs"
links = "papi_wrapper"

[badges]
travis-ci = { repository = "LutzCle/papi-sys" }
maintenance = { status = "actively-developed" }

[dependencies]

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3.32"


[features]
default = []
static-linkage = []